fix #6 - Check display on mobile devices

--- a/src/pages/css/main.css
+++ b/src/pages/css/main.css
@@ -9,9 +9,13 @@ h1 a, h1 a:hover {
 }
 
 .menu {
+    margin-bottom: 20px;
+}
+
+.menu div {
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 code {
